# kgraph

./: .dockerignore  .gitignore  CLAUDE.md  CONCURRENCY.md  OPERATIONS.md  PLAN.md  PLAN2.md  PLAN3.md  PLAN4.md  PLAN5.md  PLAN6.md  PLAN8.md  README.md  TODO.md  canonical_id_cache.json  docker-compose.yml  kgraph-site.conf  lint.sh  mkdocs.yml  patch_paper_titles.py  pyproject.toml  run-ingest-new.sh  run-ingest.sh  summarize_codebase.py  summary.md  test_frontend.sh
deploy/: Dockerfile  Dockerfile.nginx  HOWTO.md  docker-compose.prod.yml  docker-compose.staging.yml  main.py  nginx-entrypoint.sh  nginx-local.conf  nginx-prod.conf  nginx-staging.conf  nginx.conf  pyproject.toml
docs/: adapting-to-your-domain.md  architecture.md  books.md  canonical-ids-and-entity-resolution.md  contributing.md  deployment-and-operations.md  index.md  manifesto.md  overview.md  pipeline.md  schema-design-guide.md  storage-and-export.md
gwchat/: Dockerfile  next.config.ts
identity-server/: .gitignore  Dockerfile  Dockerfile.stub  docker-compose.yml  lint.sh  pyproject.toml
identity-server/domain_stub/: __init__.py  app.py
identity-server/identity_server/: __init__.py  app.py  cache.py  core.py  database.py  db_models.py  domain_client.py  models.py
identity-server/identity_server/routers/: __init__.py  dump.py  identity.py
identity-server/tests/: __init__.py  conftest.py  test_cache.py  test_core.py  test_domain_client.py  test_dump.py
kgraph/: ingest.py  progress.py
kgschema/: __init__.py  pyproject.toml  spec.py
kgschema/kgschema/: canonical_id.py  domain.py  entity.py  identity.py  storage.py
kgserver/: Dockerfile  domain_spec.py  index.md  mcp_main.py  mkdocs.yml  nginx-kgraph.conf  pipeline_interface.py  pipeline_loader.py  pyproject.toml
medlit/: .flake8  .gitignore  Dockerfile.domain-service  lint.sh  pipeline.py  pyproject.toml
medlit/domain_service/: app.py  authority.py  models.py  survivor.py  synonym_criteria.py
medlit/domain_service/tests/: test_app.py  test_survivor.py  test_synonym_criteria.py
medlit/medlit/: bundle_models.py  promotion.py
medlit/medlit/pipeline/: authority_lookup.py  bundle_builder.py  canonical_urls.py  config.py  dedup.py  mentions.py  provenance_expansion.py  resolve.py
medlit/medlit/scripts/: build_bundle.py  extract.py  fetch_vocab.py  ingest.py  parse_pmc_xml.py
medlit/medlit_schema/: domain.py  entity.py  relationship.py
medlit/tests/: conftest.py  test_authority_lookup.py  test_build_bundle.py  test_dedup.py  test_entity_normalization.py  test_extract.py  test_ner_extractor.py  test_promotion_lookup.py  test_provenance_expansion.py  test_two_pass_ingestion.py
medlit_bundle/: entities.jsonl  evidence.jsonl  manifest.json  mentions.jsonl  relationships.jsonl
medlit_merged/: entities.json  id_map.json  relationships.json
pass1_bundles/: paper_PMC10667925.json  paper_PMC11128938.json  paper_PMC11548364.json  paper_PMC11560769.json  paper_PMC11685751.json  paper_PMC11779774.json  paper_PMC11795198.json  paper_PMC12035109.json  paper_PMC12055610.json  paper_PMC12187266.json  paper_PMC12750049.json  paper_PMC12753587.json  paper_PMC12754092.json  paper_PMC12757429.json  paper_PMC12757875.json  paper_PMC12758042.json  paper_PMC12764803.json  paper_PMC12764813.json  paper_PMC12766194.json  paper_PMC12775561.json  paper_PMC12780067.json  paper_PMC12780394.json  paper_PMC12783088.json  paper_PMC12784210.json  (+15 more)
(+118 files in other folders)
