[project]
name = "identity-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.37",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27.0",
    "ruff>=0.5.5",
    "black>=24.0.0",
    "flake8>=7.1.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["identity_server*", "domain_stub*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.black]
line-length = 200

[tool.ruff]
line-length = 200

[tool.ruff.lint]
ignore = ["E402"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["call-arg", "import-untyped", "attr-defined"]
