[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kgschema"
version = "0.1.0"
description = "Knowledge graph schema: Pydantic models and ABC interfaces for entities, relationships, and storage"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["kgschema*"]
