[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medlit"
version = "0.1.0"
description = "Medical literature knowledge graph pipeline — standalone extraction of the medlit kgraph example"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "anthropic>=0.83.0",
    "ollama>=0.6.1",
    "scikit-learn>=1.6.0",
    "requests>=2.32.0",
    "json-repair>=0.30.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "kgschema",
    "kgraph",
    "kgbundle",
]

[tool.uv.sources]
kgschema = { path = "../../kgraph/kgschema", editable = true }
kgraph = { path = "../../kgraph", editable = true }
kgbundle = { path = "../../kgraph/kgbundle", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.5",
    "mypy>=1.0",
    "black>=24.0",
    "flake8>=7.1.0",
    "pylint>=3.0",
]
ner = [
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "tokenizers>=0.19.0",
]

[project.scripts]
medlit-fetch-vocab = "medlit.scripts.fetch_vocab:main"
medlit-extract = "medlit.scripts.extract:main"
medlit-ingest = "medlit.scripts.ingest:main"
medlit-build-bundle = "medlit.scripts.build_bundle:main"
medlit-parse-pmc-xml = "medlit.scripts.parse_pmc_xml:main"

[tool.hatch.build.targets.wheel]
packages = ["medlit", "medlit_schema", "domain_service"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests", "domain_service/tests"]

[tool.black]
line-length = 200

[tool.ruff]
line-length = 200

[tool.ruff.lint]
ignore = ["E402"]

[tool.pylint.main]
max-line-length = 200

[tool.flake8]
line-length = 200
ignore = ["E203", "E266", "E501", "W503", "E402"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["call-arg", "import-untyped", "attr-defined"]
